Bug 243734 - Missing data points when loading a .kst file (ASCII source)
Summary: Missing data points when loading a .kst file (ASCII source)
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: 2.0.0
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-06 09:07 UTC by Nicolas Brisset
Modified: 2010-11-12 10:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Brisset 2010-07-06 09:07:16 UTC
Version:           2.0.0_devel
OS:                MS Windows

There is a bad regression that has been introduced recently (don't know exactly when), whereby some data points are missing when initially loading a .kst file. I haven't tried data sources other than ASCII.


Reproducible: Always

Steps to Reproduce:
- fire up kst2 svn
- plot column1 vs INDEX from gyrodata.dat with the wizard (200 000 data points in the vectors)
- save the file as missing_points.kst
- File -> Open to load missing_points.kst: you get only 1071 points (seen in the data manager or Data -> View vectors)


Actual Results:  
Only 1071 points in the vectors

Expected Results:  
200 000 points in the vectors and complete curves

OS: Windows 32-Bit

If you look at the data range tool, read from 0 to end are OK. But reapplying to the vectors solves the issue.
Comment 1 Peter Kümmel 2010-07-27 01:49:36 UTC
SVN commit 1155126 by kuemmel:

AsciiPlugin: don't clear internal data after creating which always happens before parsing

BUG: 243734

 M  +2 -2      asciisource.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1155126
Comment 2 Peter Kümmel 2010-07-27 08:16:52 UTC
SVN commit 1155268 by kuemmel:

AsciiPlugin: rescan file with new parameters

BUG: 243734

 M  +6 -4      asciisource.cpp  
 M  +2 -3      asciisource.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1155268
Comment 3 Peter Kümmel 2010-08-14 12:14:55 UTC
Change version from 2.0.0_devel to 2.0.0 to simplify version numbering.
Comment 4 Peter Kümmel 2010-11-12 10:42:35 UTC
These bugs are solved with 2.0.0