AsciiPlugin: don't clear internal data after creating which always happens before parsing

BUG: 243734

git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1155126 283d02a7-25f6-0310-bc7c-ecb5cbfe19da